--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,15 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pycodestyle = "*"
+black = "*"
+flake8 = "*"
 
 [packages]
 aioquic = "*"
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
